# judo

./: .gitignore  CMakeLists.txt  JudoConfig.cmake.in  Makefile.am  README.md  configure.ac  judo.pc.in  judo_config.h.in  misra-compliance.html
.github/ISSUE_TEMPLATE/: config.yml
examples/: CMakeLists.txt  Makefile.am  parser.c  scanner.c
include/: Makefile.am  judo.h
man/: CMakeLists.txt  Makefile.am  judo.1  judo.3  judo_element.3  judo_errmax.3  judo_error.3  judo_first.3  judo_free.3  judo_gettype.3  judo_len.3  judo_maxdepth.3  judo_member.3  judo_membfirst.3  judo_membnext.3  judo_membvalue.3  judo_memfunc.3  judo_name2span.3  judo_next.3  judo_number.3  judo_numberify.3  judo_parse.3  judo_result.3  judo_scan.3  judo_span.3  judo_stream.3  judo_stringify.3  judo_tobool.3  judo_token.3  judo_type.3  judo_value.3  judo_value2span.3
src/: CMakeLists.txt  Makefile.am  judo_main.c  judo_parse.c  judo_scan.c  judo_stdin.c  judo_unidata.c  judo_utils.h
tests/: README.md
